--- a/demo/mpx-tailwindcss-v4/package.json
+++ b/demo/mpx-tailwindcss-v4/package.json
@@ -36,7 +36,7 @@
     "@mpxjs/webpack-plugin": "^2.10.3",
     "@tailwindcss/postcss": "^4.1.14",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^7.0.0",
     "postcss": "^8.5.3",
@@ -47,7 +47,7 @@
     "tailwindcss-patch": "^7.1.6",
     "typescript": "^4.1.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1",
+    "weapp-tailwindcss": "^4.4.0",
     "webpack": "^5.43.0"
   },
   "browserslist": [
