--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@types/lodash": "^4.17.14",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "babel-plugin-lodash": "^3.3.4",
@@ -63,7 +63,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.7.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1",
+    "weapp-tailwindcss": "^4.4.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
