--- a/demo/native-ts/package.json
+++ b/demo/native-ts/package.json
@@ -16,7 +16,7 @@
   "license": "",
   "dependencies": {},
   "devDependencies": {
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.20",
     "miniprogram-api-typings": "^4.0.1",
     "postcss": "^8.4.49",
@@ -26,7 +26,7 @@
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1",
+    "weapp-tailwindcss": "^4.4.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-vite": "^2.0.1"
   },
