--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@iceworks/spec": "^1.6.0",
     "@types/rax": "^1.0.18",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.0.0",
     "eslint": "^9.35.0",
@@ -52,7 +52,7 @@
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1",
+    "weapp-tailwindcss": "^4.4.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "originTemplate": "@rax-materials/scaffolds-app-ts"
