--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -64,7 +64,7 @@
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "4.1.6",
@@ -86,7 +86,7 @@
     "terser-webpack-plugin": "^5.3.14",
     "typescript": "~5.9.2",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1",
+    "weapp-tailwindcss": "^4.4.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.101.3",
     "webpack-chain": "^6.5.1"
