--- a/demo/taro-vite-tailwindcss-v4/package.json
+++ b/demo/taro-vite-tailwindcss-v4/package.json
@@ -75,7 +75,7 @@
     "@tarojs/vite-runner": "4.1.6",
     "@types/react": "^19.1.13",
     "@vitejs/plugin-react": "^5.0.3",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "babel-preset-taro": "4.1.6",
     "eslint": "^9.35.0",
     "eslint-config-taro": "4.1.6",
@@ -90,7 +90,7 @@
     "typescript": "^5.9.2",
     "vite": "^7.1.5",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1"
+    "weapp-tailwindcss": "^4.4.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
