--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -74,7 +74,7 @@
     "@typescript-eslint/parser": "^8.44.0",
     "@vue/babel-plugin-jsx": "^1.5.0",
     "@vue/compiler-sfc": "^3.5.21",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
     "babel-preset-taro": "4.1.6",
     "cross-env": "^10.0.0",
@@ -93,7 +93,7 @@
     "unplugin-vue-components": "^29.0.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1",
+    "weapp-tailwindcss": "^4.4.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.101.3"
   }
