--- a/demo/taro-webpack-tailwindcss-v4/package.json
+++ b/demo/taro-webpack-tailwindcss-v4/package.json
@@ -79,7 +79,7 @@
     "@types/node": "^24.5.1",
     "@types/react": "^19.1.13",
     "@types/webpack-env": "^1.13.6",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "babel-preset-taro": "4.1.6",
     "eslint": "^9.35.0",
     "eslint-config-taro": "4.1.6",
@@ -93,7 +93,7 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.9.2",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1",
+    "weapp-tailwindcss": "^4.4.0",
     "webpack": "5.101.3"
   }
 }
