--- a/demo/uni-app-tailwindcss-v4/package.json
+++ b/demo/uni-app-tailwindcss-v4/package.json
@@ -74,14 +74,14 @@
     "@tailwindcss/vite": "^4.1.14",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.7.0",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "tailwindcss": "^4.1.14",
     "tailwindcss-patch": "^7.1.6",
     "typescript": "^5.8.2",
     "vite": "5.2.8",
     "vue-tsc": "^2.2.8",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1"
+    "weapp-tailwindcss": "^4.4.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
