--- a/demo/uni-app-webpack-tailwindcss-v4/package.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/package.json
@@ -96,7 +96,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
@@ -107,7 +107,7 @@
     "typescript": "~4.5.5",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1"
+    "weapp-tailwindcss": "^4.4.0"
   },
   "browserslist": [
     "Android >= 4.4",
