--- a/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
@@ -8,10 +8,10 @@
     "build": "echo uni-app-x-hbuilderx-tailwindcss3"
   },
   "devDependencies": {
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "tailwindcss": "3",
     "tailwindcss-patch": "^7.1.6",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1"
+    "weapp-tailwindcss": "^4.4.0"
   }
 }
