--- a/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -9,10 +9,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "tailwindcss": "^4.1.14",
     "tailwindcss-patch": "^7.1.6",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1"
+    "weapp-tailwindcss": "^4.4.0"
   }
 }
