--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -101,7 +101,7 @@
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
-    "@weapp-tailwindcss/merge": "^1.2.3",
+    "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "10.4.18",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
@@ -121,7 +121,7 @@
     "typescript": "~5.4.2",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.4.0-alpha.1",
+    "weapp-tailwindcss": "^4.4.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "browserslist": [
