--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
+    "@ampproject/remapping": "^2.3.0",
     "@babel/core": "catalog:babelCore7285",
     "@babel/generator": "~7.28.5",
     "@changesets/changelog-github": "^0.5.1",
@@ -113,6 +114,7 @@
     "@csstools/css-color-parser": "^3.1.0",
     "@csstools/css-parser-algorithms": "^3.0.5",
     "@csstools/css-tokenizer": "^3.0.4",
+    "@csstools/postcss-is-pseudo-class": "^5.0.3",
     "@eslint/config-inspector": "^1.3.0",
     "@icebreakers/commitlint-config": "^1.2.2",
     "@icebreakers/eslint-config": "^1.5.6",
@@ -167,6 +169,7 @@
     "browserslist": "^4.27.0",
     "chokidar": "^4.0.3",
     "ci-info": "^4.3.1",
+    "clsx": "^2.1.1",
     "colorette": "^2.0.20",
     "consola": "^3.4.2",
     "cross-env": "catalog:crossEnv",
@@ -220,6 +223,7 @@
     "prettier": "^3.6.2",
     "promisify-loader-runner": "^1.0.1",
     "rimraf": "^6.0.1",
+    "rollup": "^4.52.5",
     "sass": "^1.93.2",
     "sass-embedded": "^1.93.2",
     "sass-true": "^9.0.0",
