--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -183,6 +183,7 @@
     "@babel/traverse": "~7.28.5",
     "@babel/types": "~7.28.5",
     "@vue/compiler-dom": "^3.5.22",
+    "@vue/compiler-sfc": "^3.5.22",
     "@weapp-core/escape": "~4.0.1",
     "@weapp-core/regex": "~1.0.1",
     "@weapp-tailwindcss/logger": "workspace:*",
@@ -196,7 +197,6 @@
     "magic-string": "0.30.21",
     "semver": "~7.7.3",
     "tailwindcss-patch": "catalog:tailwindcssPatch",
-    "vue": "^3.5.22",
     "webpack-sources": "3.3.3"
   }
 }
