--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.19.0",
+  "packageManager": "pnpm@10.20.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
@@ -117,12 +117,12 @@
     "@csstools/postcss-is-pseudo-class": "^5.0.3",
     "@eslint/config-inspector": "^1.3.0",
     "@icebreakers/commitlint-config": "^1.2.2",
-    "@icebreakers/eslint-config": "^1.5.6",
-    "@icebreakers/monorepo": "^2.1.0",
-    "@icebreakers/stylelint-config": "^1.2.2",
+    "@icebreakers/eslint-config": "^1.5.7",
+    "@icebreakers/monorepo": "^2.1.2",
+    "@icebreakers/stylelint-config": "^1.2.3",
     "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@tailwindcss/vite": "catalog:tailwindcss4",
-    "@tsconfig/recommended": "^1.0.10",
+    "@tsconfig/recommended": "^1.0.11",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
     "@types/babel__traverse": "^7.28.0",
@@ -147,7 +147,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/md5": "^2.3.6",
     "@types/micromatch": "^4.0.10",
-    "@types/node": "^24.9.1",
+    "@types/node": "^24.9.2",
     "@types/npm-registry-fetch": "^8.0.9",
     "@types/postcss-js": "^4.1.0",
     "@types/semver": "^7.7.1",
@@ -158,7 +158,7 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
     "@types/webpack4": "npm:@types/webpack@^4.41.39",
-    "@vitest/coverage-v8": "~3.2.4",
+    "@vitest/coverage-v8": "~4.0.4",
     "@vitest/ui": "~3.2.4",
     "@weapp-tailwindcss/shared": "workspace:*",
     "@weapp-tailwindcss/test-helper": "workspace:*",
@@ -206,10 +206,10 @@
     "md5": "2.3.0",
     "micromatch": "^4.0.8",
     "mini-css-extract-plugin": "^2.9.4",
-    "minimatch": "^10.0.3",
+    "minimatch": "^10.1.1",
     "miniprogram-automator": "^0.12.1",
     "normalize-newline": "^5.0.0",
-    "npm-registry-fetch": "^19.0.0",
+    "npm-registry-fetch": "^19.1.0",
     "only-allow": "^1.2.1",
     "pathe": "^2.0.3",
     "picocolors": "^1.1.1",
@@ -237,6 +237,7 @@
     "traverse": "^0.6.11",
     "ts-morph": "^27.0.2",
     "tsd": "^0.33.0",
+    "tsdown": "^0.15.11",
     "tslib": "^2.8.1",
     "tsup": "^8.5.0",
     "tsx": "^4.20.6",
@@ -249,7 +250,7 @@
     "vinyl-fs": "^4.0.2",
     "vite": "^7.1.12",
     "vite-plugin-inspect": "^11.3.3",
-    "vitest": "~3.2.4",
+    "vitest": "~4.0.4",
     "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "catalog:weappChildren",
     "webpack": "5.102.1",
