--- a/templates/uni-app-vue3-tailwind-hbuilder-template/package.json
+++ b/templates/uni-app-vue3-tailwind-hbuilder-template/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "3.4.18",
+    "vite": "5.4.21",
     "weapp-tailwindcss": "^4.6.3"
   }
 }
