--- a/demo/uni-app-webpack-tailwindcss-v4/package.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/package.json
@@ -51,26 +51,26 @@
   },
   "dependencies": {
     "@babel/runtime": "catalog:babelRuntime7284",
-    "@dcloudio/uni-app": "2.0.2-4070620250821001",
-    "@dcloudio/uni-app-plus": "2.0.2-4070620250821001",
-    "@dcloudio/uni-h5": "2.0.2-4070620250821001",
-    "@dcloudio/uni-i18n": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-360": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-harmony": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-jd": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-lark": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-qq": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-vue": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-4070620250821001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-4070620250821001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-4070620250821001",
-    "@dcloudio/uni-stacktracey": "2.0.2-4070620250821001",
-    "@dcloudio/uni-stat": "2.0.2-4070620250821001",
+    "@dcloudio/uni-app": "2.0.2-4080420251103001",
+    "@dcloudio/uni-app-plus": "2.0.2-4080420251103001",
+    "@dcloudio/uni-h5": "2.0.2-4080420251103001",
+    "@dcloudio/uni-i18n": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-360": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-harmony": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-jd": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-lark": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-qq": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-vue": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-4080420251103001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-4080420251103001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-4080420251103001",
+    "@dcloudio/uni-stacktracey": "2.0.2-4080420251103001",
+    "@dcloudio/uni-stat": "2.0.2-4080420251103001",
     "@vue/shared": "^3.5.22",
     "core-js": "^3.8.3",
     "flyio": "^0.6.14",
@@ -82,24 +82,24 @@
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.2.0",
     "@dcloudio/types": "^3.3.2",
-    "@dcloudio/uni-automator": "2.0.2-4070620250821001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-4070620250821001",
-    "@dcloudio/uni-cli-shared": "2.0.2-4070620250821001",
+    "@dcloudio/uni-automator": "2.0.2-4080420251103001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-4080420251103001",
+    "@dcloudio/uni-cli-shared": "2.0.2-4080420251103001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-migration": "2.0.2-4070620250821001",
-    "@dcloudio/uni-template-compiler": "2.0.2-4070620250821001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-4070620250821001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-4070620250821001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4070620250821001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4070620250821001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-4070620250821001",
+    "@dcloudio/uni-migration": "2.0.2-4080420251103001",
+    "@dcloudio/uni-template-compiler": "2.0.2-4080420251103001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-4080420251103001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-4080420251103001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4080420251103001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4080420251103001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-4080420251103001",
     "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "babel-plugin-import": "^1.13.8",
-    "cross-env": "catalog:crossEnv",
+    "cross-env": "^7.0.3",
     "jest": "^25.5.4",
     "postcss": "^8.5.3",
     "postcss-comment": "catalog:postcssComment2",
