--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -54,27 +54,27 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-4070620250821001",
-    "@dcloudio/uni-app-plus": "2.0.2-4070620250821001",
-    "@dcloudio/uni-h5": "2.0.2-4070620250821001",
+    "@dcloudio/uni-app": "2.0.2-4080420251103001",
+    "@dcloudio/uni-app-plus": "2.0.2-4080420251103001",
+    "@dcloudio/uni-h5": "2.0.2-4080420251103001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-360": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-harmony": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-jd": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-lark": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-qq": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-vue": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-4070620250821001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-4070620250821001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-4070620250821001",
-    "@dcloudio/uni-stacktracey": "2.0.2-4070620250821001",
-    "@dcloudio/uni-stat": "2.0.2-4070620250821001",
+    "@dcloudio/uni-i18n": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-360": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-harmony": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-jd": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-lark": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-qq": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-vue": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-4080420251103001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-4080420251103001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-4080420251103001",
+    "@dcloudio/uni-stacktracey": "2.0.2-4080420251103001",
+    "@dcloudio/uni-stat": "2.0.2-4080420251103001",
     "@vue/shared": "^3.5.22",
     "core-js": "^3.36.0",
     "flyio": "^0.6.14",
@@ -88,22 +88,22 @@
     "@babel/plugin-syntax-typescript": "^7.23.3",
     "@babel/runtime": "catalog:babelRuntime7284tilde",
     "@dcloudio/types": "^3.4.8",
-    "@dcloudio/uni-automator": "2.0.2-4070620250821001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-4070620250821001",
-    "@dcloudio/uni-cli-shared": "2.0.2-4070620250821001",
-    "@dcloudio/uni-migration": "2.0.2-4070620250821001",
-    "@dcloudio/uni-template-compiler": "2.0.2-4070620250821001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-4070620250821001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-4070620250821001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4070620250821001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4070620250821001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-4070620250821001",
+    "@dcloudio/uni-automator": "2.0.2-4080420251103001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-4080420251103001",
+    "@dcloudio/uni-cli-shared": "2.0.2-4080420251103001",
+    "@dcloudio/uni-migration": "2.0.2-4080420251103001",
+    "@dcloudio/uni-template-compiler": "2.0.2-4080420251103001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-4080420251103001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-4080420251103001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4080420251103001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4080420251103001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-4080420251103001",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "babel-plugin-import": "^1.13.8",
-    "cross-env": "catalog:crossEnv",
+    "cross-env": "^7.0.3",
     "jest": "^25.5.4",
     "mini-css-extract-plugin": "^2.8.1",
     "mini-types": "*",
