--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -52,27 +52,27 @@
     "postinstall": "weapp-tw patch && node ./scripts/patch-ajv-keywords.js"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-4070620250821001",
-    "@dcloudio/uni-app-plus": "2.0.2-4070620250821001",
-    "@dcloudio/uni-h5": "2.0.2-4070620250821001",
+    "@dcloudio/uni-app": "2.0.2-4080420251103001",
+    "@dcloudio/uni-app-plus": "2.0.2-4080420251103001",
+    "@dcloudio/uni-h5": "2.0.2-4080420251103001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-360": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-harmony": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-jd": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-lark": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-qq": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-vue": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-4070620250821001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-4070620250821001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-4070620250821001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-4070620250821001",
-    "@dcloudio/uni-stacktracey": "2.0.2-4070620250821001",
-    "@dcloudio/uni-stat": "2.0.2-4070620250821001",
+    "@dcloudio/uni-i18n": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-360": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-harmony": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-jd": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-lark": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-qq": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-vue": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-4080420251103001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-4080420251103001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-4080420251103001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-4080420251103001",
+    "@dcloudio/uni-stacktracey": "2.0.2-4080420251103001",
+    "@dcloudio/uni-stat": "2.0.2-4080420251103001",
     "@vant/weapp": "^1.11.4",
     "@vue/shared": "^3.5.22",
     "core-js": "^3.36.0",
@@ -86,16 +86,16 @@
     "@babel/plugin-syntax-typescript": "^7.23.3",
     "@babel/runtime": "catalog:babelRuntime7284tilde",
     "@dcloudio/types": "3.4.12",
-    "@dcloudio/uni-automator": "2.0.2-4070620250821001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-4070620250821001",
-    "@dcloudio/uni-cli-shared": "2.0.2-4070620250821001",
-    "@dcloudio/uni-migration": "2.0.2-4070620250821001",
-    "@dcloudio/uni-template-compiler": "2.0.2-4070620250821001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-4070620250821001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-4070620250821001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4070620250821001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4070620250821001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-4070620250821001",
+    "@dcloudio/uni-automator": "2.0.2-4080420251103001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-4080420251103001",
+    "@dcloudio/uni-cli-shared": "2.0.2-4080420251103001",
+    "@dcloudio/uni-migration": "2.0.2-4080420251103001",
+    "@dcloudio/uni-template-compiler": "2.0.2-4080420251103001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-4080420251103001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-4080420251103001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4080420251103001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4080420251103001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-4080420251103001",
     "@egoist/tailwindcss-icons": "^1.7.4",
     "@iconify-json/mdi": "^1.1.64",
     "@vue/cli-plugin-babel": "~5.0.8",
@@ -104,7 +104,7 @@
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "autoprefixer": "10.4.21",
     "babel-plugin-import": "^1.13.8",
-    "cross-env": "catalog:crossEnv",
+    "cross-env": "^7.0.3",
     "jest": "^25.5.4",
     "lru-cache": "^5.1.1",
     "mini-types": "*",
