--- a/demo/uni-app-webpack-tailwindcss-v4/package.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/package.json
@@ -71,10 +71,10 @@
     "@dcloudio/uni-quickapp-webview": "2.0.2-4080420251103001",
     "@dcloudio/uni-stacktracey": "2.0.2-4080420251103001",
     "@dcloudio/uni-stat": "2.0.2-4080420251103001",
-    "@vue/shared": "^3.5.22",
+    "@vue/shared": "^3.5.23",
     "core-js": "^3.8.3",
     "flyio": "^0.6.14",
-    "vue": ">= 2.6.14 < 2.7",
+    "vue": "^3.5.23",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vuex": "^3.6.2"
