--- a/packages-runtime/ui/package.json
+++ b/packages-runtime/ui/package.json
@@ -74,7 +74,10 @@
     "test:dev": "vitest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "gen:component": "tsx scripts/generate-component.ts"
+    "gen:component": "tsx scripts/generate-component.ts",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build",
+    "storybook:test": "test-storybook"
   },
   "publishConfig": {
     "exports": {
@@ -130,8 +133,18 @@
     "tailwind-variants": "^3.2.2"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^8.5.0",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/react": "^8.5.0",
+    "@storybook/react-vite": "^8.5.0",
+    "@storybook/test": "^8.5.0",
     "@tailwindcss/vite": "catalog:tailwindcss4",
     "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "storybook": "^8.5.0",
     "tailwindcss": "catalog:tailwindcss4",
     "typescript": "catalog:typescript59",
     "vite": "^7.3.0",
