--- a/apps/tailwindcss-weapp/package.json
+++ b/apps/tailwindcss-weapp/package.json
@@ -54,21 +54,22 @@
     "up:uniapp": "pnpx @dcloudio/uvm@latest --ignore-workspace"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-4050620250312001",
-    "@dcloudio/uni-app-harmony": "3.0.0-4050620250312001",
-    "@dcloudio/uni-app-plus": "3.0.0-4050620250312001",
-    "@dcloudio/uni-components": "3.0.0-4050620250312001",
-    "@dcloudio/uni-h5": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-jd": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-lark": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-qq": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4050620250312001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4050620250312001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4050620250312001",
+    "@dcloudio/uni-app": "3.0.0-4080720251210001",
+    "@dcloudio/uni-app-harmony": "3.0.0-4080720251210001",
+    "@dcloudio/uni-app-plus": "3.0.0-4080720251210001",
+    "@dcloudio/uni-components": "3.0.0-4080720251210001",
+    "@dcloudio/uni-h5": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-harmony": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-jd": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-lark": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-qq": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4080720251210001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4080720251210001",
     "@vue/shared": "^3.5.13",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.12",
@@ -76,34 +77,35 @@
     "tailwindcss-core-plugins-extractor": "^0.2.0",
     "uni-app-mp-html": "^2.5.0",
     "uview-plus": "^3.4.4",
-    "vue": "^3.5.13",
-    "vue-i18n": "^9.14.3"
+    "vue": "^3.5.26",
+    "vue-i18n": "^9.14.5"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.4.14",
-    "@dcloudio/uni-automator": "3.0.0-4050620250312001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4050620250312001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4050620250312001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4050620250312001",
+    "@dcloudio/types": "^3.4.28",
+    "@dcloudio/uni-automator": "3.0.0-4080720251210001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4080720251210001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4080720251210001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4080720251210001",
     "@egoist/tailwindcss-icons": "^1.9.0",
     "@iconify-json/ci": "^1.2.2",
     "@iconify-json/logos": "^1.2.4",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/ri": "^1.2.5",
     "@iconify-json/svg-spinners": "^1.2.2",
-    "@vue/runtime-core": "^3.5.13",
+    "@vue/runtime-core": "^3.5.26",
     "autoprefixer": "^10.4.21",
+    "indent-string": "^5.0.0",
     "miniprogram-api-typings": "^4.0.5",
     "postcss": "^8.5.3",
-    "postcss-pxtransform": "^4.0.9",
-    "postcss-rem-to-responsive-pixel": "^6.0.2",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "redent": "^4.0.0",
+    "strip-indent": "^4.1.1",
     "tailwindcss": "^3.4.18",
     "unplugin-auto-import": "^19.1.1",
     "vite": "5.2.8",
     "vue-eslint-parser": "^9.4.3",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.1.0"
+    "weapp-tailwindcss": "workspace:*"
   }
 }
